[project]
name = "models"
version = "0.0.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "gpt2",
    "gptlike",
    "memory",
    "vae",
    "genesis-walking",
    "flow_matching_pendulum",
]
# exclude = ["**/scratch*"]

# Shared “dev tools” everyone needs:
[project.optional_dependencies.dev]
lint = ["ruff", "black", "pytest", "ipython"]
