[project]
name = "flow-matching-pendulum"
version = "0.1.0"
description = "Learning Flow Matching for RL control with Inverted Pendulum"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "equinox>=0.11.0",
    "optax>=0.1.0",
    "gymnasium>=0.29.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
    "pytest>=7.0.0",
]
