[project]
name = "memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "bert-score>=0.3.13",
    "dspy>=2.6.27",
    "dspy-ai>=2.6.27",
    "google-genai>=1.21.1",
    "huggingface-hub>=0.33.1",
    "mlflow>=3.1.1",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "openai>=1.0.0",
    "packaging>=24.0",
    "pathlib>=1.0.1",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "rouge>=1.0.1",
    "tenacity>=8.5.0",
    "together>=1.5.17",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]
